More OpenAPI documentation and Backend
Decided to rename the configuration end points for descry to be called
backend to make it a bit more generic. Filled out some of the endpoint
calls.
