# openapi.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
-  title: Archivist Descry api
-  description: API for the Descry scanning microservive
+  title: Archivist Descry API
+  description: API for the Descry scanning microservice
   version: 1.0.0
 
 components:
@@ -58,14 +58,14 @@ servers:
   - url: /api/v1
 
 paths:
-  /config:
+  /backend:
     get:
-      description: Return available configurations
+      description: Return current Descry backend status and information
       tags:
-        - config
+        - backend
       responses:
         '200':
-          description: Current Descry configuration
+          description: Current Descry status
           schema:
             type: object
         default:
@@ -73,29 +73,57 @@ paths:
           schema:
             $ref: '#/components/schemas/error'
 
-  /config/device_refresh:
-    get:
-      description: Return the new list of available devices
+  /backend/reinitialize:
+    put:
+      description: Reinitialize the scanner backend
       tags:
-        - config
+        - backend
+      response:
+        '200':
+          description: Service reinitialized
+
+  /backend/discover_device:
+    get:
+      description: Discover available devices
       responses:
         '200':
-          description: List of available devices
+          description: A list of available scanning devices
+      tags:
+        - backend
+    put:
+      description: Add a device by IP or name
+      parameters:
+        - in: query
+          name: name
+          description: Device name
+          schema:
+            type: string
+        - in: query
+          name: url
+          description: Device Url
+          schema:
+            type: string
+        - in: query
+          name: type
+          description: Type of device
+          schema:
+            type: string
+            enum: ["airscan"]
+      responses:
+        '200':
+          description: New device configuration applied
+        '404':
+          description: Unknown device type
         default:
           description: Unexpected Error
           schema:
             $ref: '#/components/schemas/error'
-
-  /config/add_device:
-    put:
-      description: Add a device by IP or name
       tags:
-        - config
-      responses:
+        - backend
 
   /devices:
     get:
-      description: List of configured scanning device resources
+      description: List of available scanning device resources
       tags:
         - devices
 
@@ -144,15 +172,16 @@ paths:
           required: true
         - in: query
           name: options
-          type: array
-          items:
-            name: option
-            type: object
-            properties:
-              name:
-                type: string
-              value:
-                type: string
+          schema:
+            type: array
+            items:
+              name: option
+              type: object
+              properties:
+                name:
+                  type: string
+                  value:
+                    type: string
 
       tags:
         - devices
@@ -169,3 +198,28 @@ paths:
           required: true
       tags:
         - devices
+
+  /jobs:
+    get:
+      description: A list of current jobs
+      responses:
+        '200':
+          description: List of current jobs
+        default:
+          description: Unexpected Error
+      tags:
+        - jobs
+  /jobs/{guid}:
+    get:
+      description: Get a current job resource
+      parameters:
+        - in: path
+          name: guid
+          description: guid of the current job
+      responses:
+        '200':
+          description: Job resource information
+        default:
+          description: Unexpected Error
+      tags:
+        - jobs
